--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AsyncJavascript",
+  "name": "cleanarchitecture",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,16 +7,23 @@
     "main": "tsc && node ./dist/main.js",
     "test": "tsc && jest ./dist",
     "express": "tsc && node ./dist/src/infra/http/express.js",
-    "hapi": "tsc && node ./dist/src/infra/http/hapi.js"
+    "hapi": "tsc && node ./dist/src/infra/http/hapi.js",
+    "prettier": "npx prettier --write ."
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
-    "@types/jest": "^26.0.22",
     "express": "^4.17.1",
-    "jest": "^26.6.3",
     "pg-promise": "^10.10.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "prettier": "2.2.1"
   }
 }
